# tyjuliacall

./: .gitignore  LICENSE  README.md  bench.py  build.py  dev-env.ps1  dev-env.sh  mk-demo-image.sh  pyproject.toml  test.py  ty-env.sh
.github/workflows/: ci.yml  python-publish-pre.yml  python-publish.yml
.tongyuan/: bench.py  ty-env.ps1  ty-env.sh
.tongyuan/0826测试/: 0826测试-tyjuliacall.py  0826测试.md
0826测试/: 0826测试-pyenv.py  0826测试-tyjuliacall.py
libjuliacall/: build.sh  juliacall.cpp
libjuliacall/include/: TyPython.hpp  common.hpp  tyjuliacapi-base.hpp  tyjuliacapi-docs.hpp  tyjuliacapi-types.hpp  tyjuliacapi.hpp
tests/: test_tyjuliacall.py
tyjuliacall/: __init__.py
tyjuliasetup/: Project.toml  __init__.py  cli.py  compat.py  julia_src_binding.py  jv.py
tyjuliasetup/src/: TyJuliaSetup.jl  boot.jl  box.jl  exception.jl  juliabase.jl  ops.jl  pymeths.jl  unbox.jl
